--- a/bulletin.html
+++ b/bulletin.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+     <!-- Bootstrap CSS -->
+     <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css' 
+     rel='stylesheet' integrity='sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx' 
+     crossorigin='anonymous'>
+     <link rel="stylesheet" href="style.css">
+    <title>Bulletin Homepage</title>
 </head>
 <body>
-    
+    <nav class="navbar">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+           <img src= './prepnancy logo.png' style="width: 150px;">
+          </a>
+              <ul class="navbar-nav hstack">
+              <li class="nav-item me-3">
+              <a class="nav-link" href="">Home</a>
+                </li>
+            <li class="nav-item me-3">
+                <a class="nav-link" aria-current="page" href="/aboutus.html">About Us</a>
+              </li>
+              <li class="nav-item me-3">
+                <a class="nav-link" href="/usefullinks.html">Useful Links</a>
+              </li>
+              </ul>
+      </nav>
+
+      <div class="textbox1">
+            <h1>Share with our community!</h1>
+            Let us create a cohesive community by sharing our advices. Click on interested topics below to check poll results!
+      </div>
+
+      <div class="topics">
+            <h3>Medical</h3>
+            
+            <h3>Body Care</h3>
+      </div>
 </body>
 </html>
