--- a/bulletin.html
+++ b/bulletin.html
@@ -32,13 +32,36 @@
 
       <div class="textbox1">
             <h1>Share with our community!</h1>
-            Let us create a cohesive community by sharing our advices. Click on interested topics below to check poll results!
+            Let us create a cohesive community by sharing our advices. Check poll results at the <a href="./bulletinresult.html">bulletin</a>!
       </div>
 
       <div class="topics">
             <h3>Medical</h3>
-            
+            <div class="column1">
+                <div class="img-with-text">
+                    <img src="./img/hospital.png" alt="hospital"><p>Hospital</p>
+                </div>
+                <div class="img-with-text">
+                    <img src="./img/milk bottle 2.png" alt="milkbottle"><p>Milk Bottle</p>
+                </div>
+                <div class="img-with-text">
+                     <img src="./img/prams 3.png" alt="pram"><p>Pram</p>
+                </div>
+            </div>
             <h3>Body Care</h3>
+            <div class="column1">
+                <div class="img-with-text">
+                    <img src="./img/stretch marks.png" alt="stretchmark"><p>Stretch Mark</p>
+                </div>
+                <div class="img-with-text">
+                    <img src="./img/vitamins.png" alt="vitamin"><p>Vitamin</p>
+                </div>
+                <div class="img-with-text">
+                    <img src="./img/body oil.png" alt="body oil"><p>Body Oil</p>
+                </div>
+                
+            </div>
+
       </div>
 </body>
 </html>
