--- a/bulletin.html
+++ b/bulletin.html
@@ -32,7 +32,7 @@
 
       <div class="textbox1">
             <h1>Share with our community!</h1>
-            Let us create a cohesive community by sharing our advices. Check poll results at the <a href="./bulletinresult.html">bulletin</a>!
+            Let us create a cohesive community by sharing our advices. Check poll results at the <a href="">bulletin</a>!
       </div>
 
       <div class="topics">
