--- a/quiz.html
+++ b/quiz.html
@@ -7,6 +7,24 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <nav class="navbar">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+           <img src= './prepnancy logo.png' style="width: 150px;">
+          </a>
+              <ul class="navbar-nav hstack">
+              <li class="nav-item me-3">
+                <a class="nav-link" aria-current="page" href="/aboutus.html">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/usefullinks.html">Useful Links</a>
+              </li>
+              </ul>
+      </nav>
+
+
+
+
+
 </body>
 </html>
