--- a/quiz.html
+++ b/quiz.html
@@ -4,27 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- Bootstrap CSS -->
+    <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css' 
+        rel='stylesheet' integrity='sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx' 
+        crossorigin='anonymous'>
+    <link rel="stylesheet" href="style.css">
+    <title>Quiz</title>
 </head>
 <body>
-    <nav class="navbar">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-           <img src= './prepnancy logo.png' style="width: 150px;">
-          </a>
-              <ul class="navbar-nav hstack">
-              <li class="nav-item me-3">
-                <a class="nav-link" aria-current="page" href="/aboutus.html">About Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/usefullinks.html">Useful Links</a>
-              </li>
-              </ul>
-      </nav>
+  <nav class="navbar">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+       <img src= './prepnancy logo.png' style="width: 150px;">
+      </a>
+          <ul class="navbar-nav hstack">
+          <li class="nav-item me-3">
+            <a class="nav-link" aria-current="page" href="/aboutus.html">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/usefullinks.html">Useful Links</a>
+          </li>
+          </ul>
+  </nav>
+
+  <h3></h3>
 
 
-
-
-
+<script src="quiz.js"></script>
 </body>
 </html>
