created input field

--- a/quiz.html
+++ b/quiz.html
@@ -27,8 +27,14 @@
           </ul>
   </nav>
 
-  <h3></h3>
+  <div class="container-fluid">
+    <h3 class="row"></h3>
+    <input class="row form-control mx-auto mb-4" type="text" placeholder="Enter your product here!">
+    <button class="row btn btn-primary mx-auto float-end">Contribute Now!</button>
+  </div>
+  
 
+  
 
 <script src="quiz.js"></script>
 </body>
