--- a/bulletin.html
+++ b/bulletin.html
@@ -53,17 +53,18 @@
                 </div>
             </div>
             <h3>Body Care</h3> <!-- div row -->
-            <div class="column1">
+            <div class="column3">
                 <div class="img-with-text">
-                   <a href="quiz.html?topic=stretchmark" onclick="choosing('stretchmark')"> <img src="./img/stretch marks.png" alt="stretchmark" onclick="choosing('stretchmark')"><p>Stretch Mark</p> </a> 
+                    <img src="./img/stretch marks.png" alt="stretchmark" onclick="choosing('stretchmark')"> <a href="quiz.html?topic=stretchmark">Stretch Mark</a> 
                 </div>
+                <!-- div col -->
                 <div class="img-with-text">
-                    <a href="#" onclick="choosing('vitamin')"> <img src="./img/vitamins.png" alt="vitamin"><p>Vitamin</p> </a> 
+                    <img src="./img/vitamins.png" alt="vitamin" onclick="choosing('vitamin')"> <a href="quiz.html?topic=vitamin">Vitamin</a> 
                 </div>
+                <!-- div col -->
                 <div class="img-with-text">
-                    <a href="#" onclick="choosing('body oil')"> <img src="./img/body oil.png" alt="body oil"><p>Body Oil</p> </a> 
+                    <img src="./img/body oil.png" alt="bodyoil" onclick="choosing('bodyoil')"> <a href="quiz.html?topic=bodyoil">Body Oil</a> 
                 </div>
-                
             </div>
 
       </div>
