--- a/bulletin.html
+++ b/bulletin.html
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <h3>Body Care</h3> <!-- div row -->
-            <div class="column3">
+            <div class="col-3">
                 <div class="img-with-text">
                     <img src="./img/stretch marks.png" alt="stretchmark" onclick="choosing('stretchmark')"> <a href="quiz.html?topic=stretchmark">Stretch Mark</a> 
                 </div>
