updated the bulletin html

--- a/bulletin.html
+++ b/bulletin.html
@@ -39,9 +39,9 @@
 
       <div class="container-fluid topics" id="app">
             <h3>Baby Products</h3>  <!-- insert div row here -->
-            <div class="col-3">
+            <div class="imgbox col-3">
                 <div class="img-with-text">
-                    <img src="./img/hospital.png" alt="hospital" onclick="choosing('hospital')"> <a href="quiz.html?topic=hospital">Hospital</a> 
+                    <img src="./img/baby pacifier.png" alt="babypacifier" onclick="choosing('babypacifier')"> <a href="quiz.html?topic=babypacifier">Baby Pacifier</a> 
                 </div>
                 <!-- div col -->
                 <div class="img-with-text">
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <h3>Body Care</h3> <!-- div row -->
-            <div class="col-3">
+            <div class="imgbox col-3 ">
                 <div class="img-with-text">
                     <img src="./img/stretch marks.png" alt="stretchmark" onclick="choosing('stretchmark')"> <a href="quiz.html?topic=stretchmark">Stretch Mark</a> 
                 </div>
