created result page

--- a/bulletin.html
+++ b/bulletin.html
@@ -49,7 +49,7 @@
                 </div>
                 <!-- div col -->
                 <div class="img-with-text">
-                    <img src="./img/prams 3.png" alt="pram" onclick="choosing('prams')"> <a href="quiz.html?topic=prams">Pram</a> 
+                    <img src="./img/prams 3.png" alt="pram" onclick="choosing('pram')"> <a href="quiz.html?topic=pram">Pram</a> 
                 </div>
             </div>
             <h3>Body Care</h3> <!-- div row -->
