--- a/bulletinresult.html
+++ b/bulletinresult.html
@@ -32,9 +32,24 @@
               </ul>
       </nav>
 
+      <div class="result_dropbox">
+        <label for="products"> Category:</label>
+        <select name="products" id="products">
+             <option value="babypacifier">Baby Pacifier</option>
+             <option value="milkbottle">Milk Bottle</option>
+            <option value="pram">Pram</option>
+            <option value="stretchmark">Stretch Mark</option>
+            <option value="vitamin">Vitamin</option>
+            <option value="bodyoil">Body Oil</option>
+        </select>
+        </div>
+
+        <div class="result_header">Community's Recommendation</div>
+       
 
 
-      
+
+
     </div>
     <script src="quiz.js"></script>     
     </body>
