update the source code to bar chart

--- a/bulletinresult.html
+++ b/bulletinresult.html
@@ -45,7 +45,9 @@
         </div>
 
         <div class="result_header">Community's Recommendation</div>
-       
+
+        <!-- comment - source: https://developers.google.com/chart/interactive/docs/gallery/barchart -->
+        <!-- OR THIS https://www.syncfusion.com/kb/10855/how-to-create-horizontal-bar-chart-in-js -->
 
 
 
