--- a/bulletinresult.html
+++ b/bulletinresult.html
@@ -48,6 +48,9 @@
 
         <!-- comment - source: https://developers.google.com/chart/interactive/docs/gallery/barchart -->
         <!-- OR THIS https://www.syncfusion.com/kb/10855/how-to-create-horizontal-bar-chart-in-js -->
+        <!-- or https://www.anychart.com/blog/2017/10/25/javascript-bar-chart-tutorial/ -->
+       <!-- or  https://www.w3schools.com/js/js_graphics_chartjs.asp -->
+       <!-- or have a podium https://codepen.io/ThyGat/pen/xxMmbE -->
 
 
 
