still trynna find out how to write data

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Document</title>
 </head>
 <body>
+  <h1 id="target"></h1>
     <nav class="navbar">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
@@ -69,5 +70,30 @@
         }
 }
 </script> -->
+
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyAIBTV0ugGqIMp5lfSdUDXhVMg7cQQMiWk",
+    authDomain: "prepnancy-c0c9b.firebaseapp.com",
+    projectId: "prepnancy-c0c9b",
+    storageBucket: "prepnancy-c0c9b.appspot.com",
+    messagingSenderId: "56668153455",
+    appId: "1:56668153455:web:af3c28b4282093ca598f9a",
+    measurementId: "G-X27L846Z32",
+    databaseURL: "https://prepnancy-c0c9b-default-rtdb.asia-southeast1.firebasedatabase.app/"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 </body>
 </html>
