--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
         rel='stylesheet' integrity='sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx' 
         crossorigin='anonymous'>
         <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Login</title>
 </head>
 <body>
-  <h1 id="target"></h1>
     <nav class="navbar">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
@@ -30,7 +29,7 @@
     <div class="container">
 		<div class="login">
 			<h1>Welcome, Mommy!</h1>
-			<form action="authenticate.php" method="post">
+			<!-- <form> -->
 				<label for="username">
 					<i class="fas fa-user"></i>
 				</label>
@@ -39,11 +38,11 @@
 					<i class="fas fa-lock"></i>
 				</label>
 				<input type="password" name="password" placeholder="Password" id="password" required>
-				<button class="login-button" title="login" onclick="validate()">Log In</button>
+				<button class="login-button" title="login" id="login" >Log In</button>
 
         <input type="button" onclick ="" value="New Mommy? Sign up here!" />
 
-			</form>     
+			<!-- </form>      -->
     </div>
 		</div>
     <!-- <script>
@@ -71,29 +70,6 @@
 }
 </script> -->
 
-<script type="module">
-  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-app.js";
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-analytics.js";
-  // TODO: Add SDKs for Firebase products that you want to use
-  // https://firebase.google.com/docs/web/setup#available-libraries
-
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  const firebaseConfig = {
-    apiKey: "AIzaSyAIBTV0ugGqIMp5lfSdUDXhVMg7cQQMiWk",
-    authDomain: "prepnancy-c0c9b.firebaseapp.com",
-    projectId: "prepnancy-c0c9b",
-    storageBucket: "prepnancy-c0c9b.appspot.com",
-    messagingSenderId: "56668153455",
-    appId: "1:56668153455:web:af3c28b4282093ca598f9a",
-    measurementId: "G-X27L846Z32",
-    databaseURL: "https://prepnancy-c0c9b-default-rtdb.asia-southeast1.firebasedatabase.app/"
-  };
-
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const analytics = getAnalytics(app);
-</script>
+<script src="try.js" type="module"></script>
 </body>
 </html>
