--- a/register.html
+++ b/register.html
@@ -9,7 +9,7 @@
         rel='stylesheet' integrity='sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx' 
         crossorigin='anonymous'>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Register</title>
 </head>
 <body>
     <nav class="navbar">
@@ -67,12 +67,13 @@
             <div class="row mt-4 mx-auto">
                 <div class="col-5"></div>
                 <div class="col-2">
-                    <button class="btn btn-success">Register</button>
+                    <button class="btn btn-success" id="regis">Register</button>
                 </div>
             </div>
         </div>
       </div>
 
+<script src="try.js" type="module"></script> 
 </body>
 
 <!-- Vue 3 -->
@@ -107,4 +108,5 @@
     });
     const vm = app.mount('#app'); 
 </script>
+
 </html>
