working on word cloud

--- a/bulletinresult.html
+++ b/bulletinresult.html
@@ -44,7 +44,11 @@
         </select>
         </div>
 
-        <div class="result_header">Community's Recommendation</div>
+        <div class="result_header">
+          Community's Recommendation
+        </div>
+
+        <div id="results"></div>
 
         <!-- comment - source: https://developers.google.com/chart/interactive/docs/gallery/barchart -->
         <!-- OR THIS https://www.syncfusion.com/kb/10855/how-to-create-horizontal-bar-chart-in-js -->
@@ -56,6 +60,9 @@
 
 
     </div>
-    <script src="quiz.js"></script>     
+    <!-- Axios -->
+    <script src='https://unpkg.com/axios/dist/axios.js'></script>
+    <script src="quiz.js"></script>   
+    <script src="try.js" type="module"></script>  
     </body>
     </html>
