--- a/bulletin.html
+++ b/bulletin.html
@@ -34,38 +34,43 @@
 
       <div class="textbox1">
             <h1>Share with our community!</h1>
-            Let us create a cohesive community by sharing our advices. Check poll results at the <a href="">bulletin</a>!
+            Let us create a cohesive community by sharing our advices. Check poll results at the <a href="bulletinresult.html"> bulletin </a>!
       </div>
 
       <div class="container-fluid topics" id="app">
-            <h3>Baby Products</h3>  <!-- insert div row here -->
-            <div class="imgbox col-3">
-                <div class="img-with-text">
-                    <img src="./img/baby pacifier.png" alt="babypacifier" onclick="choosing('babypacifier')"> <a href="quiz.html?topic=babypacifier">Baby Pacifier</a> 
+            <h3 class="row">Baby Products</h3>  <!-- insert div row here -->
+            <div class="row m-0">
+                <!-- <div class="imgbox col-3"> -->
+                <div class="img-with-text col-4">
+                    <img src="./img/baby pacifier.png" alt="babypacifier" onclick="choosing('babypacifier')"> <br> <a href="quiz.html?topic=babypacifier"> Baby Pacifier</a> 
                 </div>
                 <!-- div col -->
-                <div class="img-with-text">
-                    <img src="./img/milk bottle 2.png" alt="milkbottle" onclick="choosing('milkbottle')"> <a href="quiz.html?topic=milkbottle">Milk Bottle</a> 
+                <div class="img-with-text col-4">
+                    <img src="./img/milk bottle 2.png" alt="milkbottle" onclick="choosing('milkbottle')"> <br> <a href="quiz.html?topic=milkbottle">Milk Bottle</a> 
                 </div>
                 <!-- div col -->
-                <div class="img-with-text">
-                    <img src="./img/prams 3.png" alt="pram" onclick="choosing('pram')"> <a href="quiz.html?topic=pram">Pram</a> 
+                <div class="img-with-text col-4">
+                    <img src="./img/prams 3.png" alt="pram" onclick="choosing('pram')"> <br><a href="quiz.html?topic=pram">Pram</a> 
                 </div>
             </div>
-            <h3>Body Care</h3> <!-- div row -->
-            <div class="imgbox col-3 ">
-                <div class="img-with-text">
-                    <img src="./img/stretch marks.png" alt="stretchmark" onclick="choosing('stretchmark')"> <a href="quiz.html?topic=stretchmark">Stretch Mark</a> 
+            <!-- </div> -->
+            
+            <h3 class="row">Body Care</h3> 
+            <div class="row m-0">
+                <!-- <div class="imgbox col-3 "> -->
+                <div class="img-with-text col-4">
+                    <img src="./img/stretch marks.png" alt="stretchmark" onclick="choosing('stretchmark')"> <br> <a href="quiz.html?topic=stretchmark">Stretch Mark</a> 
                 </div>
                 <!-- div col -->
-                <div class="img-with-text">
-                    <img src="./img/vitamins.png" alt="vitamin" onclick="choosing('vitamin')"> <a href="quiz.html?topic=vitamin">Vitamin</a> 
+                <div class="img-with-text col-4">
+                    <img src="./img/vitamins.png" alt="vitamin" onclick="choosing('vitamin')"> <br> <a href="quiz.html?topic=vitamin">Vitamin</a> 
                 </div>
                 <!-- div col -->
-                <div class="img-with-text">
-                    <img src="./img/body oil.png" alt="bodyoil" onclick="choosing('bodyoil')"> <a href="quiz.html?topic=bodyoil">Body Oil</a> 
+                <div class="img-with-text col-4">
+                    <img src="./img/body oil.png" alt="bodyoil" onclick="choosing('bodyoil')"> <br> <a href="quiz.html?topic=bodyoil">Body Oil</a> 
                 </div>
-            </div>
+            <!-- </div> -->
+            </div><!-- div row -->
 
       </div>
 <script src="quiz.js"></script>     
