--- a/register.html
+++ b/register.html
@@ -19,7 +19,7 @@
           </a>
               <ul class="navbar-nav hstack">
               <li class="nav-item me-3">
-                <a class="nav-link" aria-current="page" href="/aboutus.html">About Us</a>
+                <a class="nav-link" aria-current="page" href="/aboutus.html">About Prepnancy</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/usefullinks.html">Useful Links</a>
