--- a/homepage.html
+++ b/homepage.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="homepage.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="environment">
+        <div id="content">
+          <section id="first"></section>
+          <section id="second"></section>
+          <section id="third"></section>
+          <section id="fourth"></section>
+        </div>
+      </div>
+  
+      <div id="scroll-proxy"></div>
+  
+  <!--    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
 </body>
 </html>
