--- a/homepage.html
+++ b/homepage.html
@@ -16,6 +16,8 @@
           <section id="fourth"></section>
         </div>
       </div>
+
+      <div id="avatar"><img src="img/milk bottle 2.png" alt=""></div>
   
       <div id="scroll-proxy"></div>
   
