--- a/homepage.html
+++ b/homepage.html
@@ -4,43 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< Updated upstream
+
     <link rel="stylesheet" href="homepage.css">
-    <title>Document</title>
+    <title>Welcome, Mommy</title>
 </head>
 <body>
+
+    <div id="includedContent"></div>
     <div id="environment">
         <div id="content">
-          <section id="first"></section>
-          <section id="second"></section>
-          <section id="third"></section>
-          <section id="fourth"></section>
+            <section id="first"></section>
+            <section id="second"></section>
+            <section id="third"></section>
+            <section id="fourth"></section>
         </div>
       </div>
 
-      <div id="avatar"><img src="img/milk bottle 2.png" alt=""></div>
-  
+      <!-- <div id="avatar"><img src="img/avatar.png" alt=""></div>
+   -->
       <div id="scroll-proxy"></div>
   
   <!--    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
-=======
-    <title>Welcome, Mommy</title>
-    
-</head>
-<body>
-    <nav class="navbar bg-light">
-        <div class="container-fluid">
-           <img src= '../wad2G3T6/prepnancy logo.png'>
-              <ul class="navbar-nav hstack col-3">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/aboutus.html">About Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/usefullinks.html">Useful Links</a>
-              </li>
-      </nav>
 
-      <div id="includedContent"></div>
->>>>>>> Stashed changes
 </body>
 </html>
