--- a/homepage.html
+++ b/homepage.html
@@ -20,11 +20,11 @@
         </div>
       </div>
 
-      <!-- <div id="avatar"><img src="img/avatar.png" alt=""></div>
-   -->
+      <div id="avatar"><img src="img/avatar.png" alt=""></div>
+  
       <div id="scroll-proxy"></div>
   
   <!--    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
-
+<!-- https://stackoverflow.com/questions/67248505/how-do-i-make-an-image-move-on-keys-up-down-left-right-->
 </body>
 </html>
