--- a/quiz.html
+++ b/quiz.html
@@ -1,41 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap CSS -->
-    <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css' 
-        rel='stylesheet' integrity='sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx' 
-        crossorigin='anonymous'>
-    <link rel="stylesheet" href="style.css">
-    <title>Quiz</title>
-</head>
-<body>
-  <nav class="navbar">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-       <img src= './prepnancy logo.png' style="width: 150px;">
-      </a>
-          <ul class="navbar-nav hstack">
-          <li class="nav-item me-3">
-            <a class="nav-link" aria-current="page" href="/aboutus.html">About Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/usefullinks.html">Useful Links</a>
-          </li>
-          </ul>
-  </nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="tryquiz.css">
+  </head>
+  <body>
+    <div class="center">
+      <div id="register">
+        <i id="progressButton" class="ion-android-arrow-forward next">-></i>
 
-  <div class="container-fluid">
-    <h3 class="row"></h3>
-    <input class="row form-control mx-auto mb-4" type="text" placeholder="Enter your product here!">
-    <button class="row btn btn-primary mx-auto float-end">Contribute Now!</button>
-  </div>
-  
-
-  
-
-<script src="quiz.js"></script>
-</body>
+        <div id="inputContainer">
+          <input id="inputField" type="text" required autofocus />
+          <label id="inputLabel"> abc </label>
+        </div>
+      </div>
+    </div>
+    <script src="tryquiz.js"></script>
+  </body>
 </html>
