--- a/bulletin.html
+++ b/bulletin.html
@@ -73,6 +73,11 @@
             </div><!-- div row -->
 
       </div>
-<script src="quiz.js"></script>     
+<script>
+    function choosing(c)
+{
+    document.location.href = './quiz.html?topic='+c;
+}
+</script>     
 </body>
 </html>
