--- a/quiz.html
+++ b/quiz.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap CSS -->
     <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css' 
         rel='stylesheet' integrity='sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx' 
         crossorigin='anonymous'>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/quiz.css">
     <title>Quiz</title>
 </head>
 <body>
   <nav class="navbar">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-       <img src= './prepnancy logo.png' style="width: 150px;">
+       <!-- <img src= './prepnancy logo.png' style="width: 150px;"> -->
       </a>
           <ul class="navbar-nav hstack">
           <li class="nav-item me-3">
@@ -27,13 +26,20 @@
           </ul>
   </nav>
 
-  <div class="container-fluid">
-    <h3 class="row"></h3>
-    <input class="row form-control mx-auto mb-4" id="input" type="text" placeholder="Enter your product here!">
-    <button class="row btn btn-primary mx-auto float-end" id="submit">Contribute Now!</button>
+  <div class="center">
+    <div id="register">
+  
+      <i id="progressButton" class="ion-android-arrow-forward next">></i>
+  
+      <div id="inputContainer">
+        <input id="inputField" type="text" required />
+        <label id="inputLabel"></label>
+      </div>
+  
+    </div>
   </div>
 
-<script src="quiz.js"></script>
-<script src="./try.js" type="module"></script> 
+<script src="js/database.js" type="module"></script>
+<script src="js/quiz.js"></script>
 </body>
 </html>
