--- a/bulletin/bulletinresult.html
+++ b/bulletin/bulletinresult.html
@@ -10,7 +10,8 @@
      <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css' 
      rel='stylesheet' integrity='sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx' 
      crossorigin='anonymous'>
-     <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="../style.css">
+     <link rel="stylesheet" href="../css/podium.css">
     <title>Bulletin Homepage</title>
 </head>
 <body>
@@ -50,23 +51,23 @@
 
         <div id="results" class="d-flex justify-content-center"></div>
 
-        <!-- comment - source: https://developers.google.com/chart/interactive/docs/gallery/barchart -->
-        <!-- OR THIS https://www.syncfusion.com/kb/10855/how-to-create-horizontal-bar-chart-in-js -->
-        <!-- or https://www.anychart.com/blog/2017/10/25/javascript-bar-chart-tutorial/ -->
-       <!-- or  https://www.w3schools.com/js/js_graphics_chartjs.asp -->
-       <!-- or have a podium https://codepen.io/ThyGat/pen/xxMmbE -->
-
-
-
 
     </div>
+  <div class="podium">
+    <table id="ladder" class="mx-auto">
+      <tr>
+        <td><h2 id="podium1"></h2></td>
+        <td><h2 id="podium0"></h2></td>
+        <td><h2 id="podium2"></h2></td>
+      </tr>
+   </table>
+  </div>
     <!-- Axios -->
     <script src='https://unpkg.com/axios/dist/axios.js'></script>
-    <script src="https://www.rgraph.net/libraries/RGraph.common.core.js"></script>
-<script src="https://www.rgraph.net/libraries/RGraph.bar.js"></script>
+    <!-- <script src="https://www.rgraph.net/libraries/RGraph.common.core.js"></script> -->
+<!-- <script src="https://www.rgraph.net/libraries/RGraph.bar.js"></script> -->
 
-<canvas id="cvs" width="500" height="600" class="d-block mx-auto"></canvas>
-    <script src="quiz.js"></script>   
-    <script src="try.js" type="module"></script>  
+<!-- <canvas id="cvs" width="500" height="600" class="d-block mx-auto"></canvas> -->
+    <script src="../js/database.js" type="module"></script>  
     </body>
     </html>
