--- a/bulletin/quiz.html
+++ b/bulletin/quiz.html
@@ -7,14 +7,14 @@
     <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css' 
         rel='stylesheet' integrity='sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx' 
         crossorigin='anonymous'>
-    <link rel="stylesheet" href="css/quiz.css">
+    <link rel="stylesheet" href="../css/quiz.css">
     <title>Quiz</title>
 </head>
 <body>
   <nav class="navbar">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-       <!-- <img src= './prepnancy logo.png' style="width: 150px;"> -->
+       <img src= './prepnancy logo.png' style="width: 150px;">
       </a>
           <ul class="navbar-nav hstack">
           <li class="nav-item me-3">
@@ -27,19 +27,21 @@
   </nav>
 
   <div class="center">
+    <div id="thankyou" hidden class="mx-auto">
+      <h1>Thank you for your contribution</h1>
+      <button onclick="location.href = 'bulletin.html';" class="btn btn-primary">Back to Polls</button>
+      <button onclick="location.href = 'bulletinresult.html';" class="btn btn-primary float-end">To Summary Page</button>
+    </div>
     <div id="register">
-  
       <i id="progressButton" class="ion-android-arrow-forward next">></i>
-  
       <div id="inputContainer">
         <input id="inputField" type="text" required />
         <label id="inputLabel"></label>
       </div>
-  
     </div>
   </div>
 
-<script src="js/database.js" type="module"></script>
-<script src="js/quiz.js"></script>
+<script src="../js/database.js" type="module"></script>
+<script src="../js/quiz.js"></script>
 </body>
 </html>
