updated canva pic

--- a/homepage.html
+++ b/homepage.html
@@ -13,15 +13,11 @@
     <div id="includedContent"></div>
     <div id="environment">
         <div id="content">
-            <section id="first"></section>
-            <section id="second"></section>
-            <section id="third"></section>
-            <section id="fourth"></section>
+            <section id="backgroundpic"></section>
         </div>
       </div>
 
-      <div id="avatar"><img src="img/avatar.png" alt=""></div>
-  
+      
       <div id="scroll-proxy"></div>
   
   <!--    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
