--- a/register.html
+++ b/register.html
@@ -9,7 +9,7 @@
         rel='stylesheet' integrity='sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx' 
         crossorigin='anonymous'>
     <link rel="stylesheet" href="style.css">
-    <title>Register</title>
+    <title>Login</title>
 </head>
 <body>
     <nav class="navbar">
