still work in progress

--- a/homepage.html
+++ b/homepage.html
@@ -14,6 +14,10 @@
     <div id="environment">
         <div id="content">
             <section id="backgroundpic"></section>
+            <a href="bulletin.html"><div class="bulletinhouse"><img height=484px width=356px src="./img/5.png" alt=""></div></a>
+            <a href="bulletin.html"><div class="calendarhouse"></div></a>
+            <a href="bulletin.html"><div class="inforhubhouse"></div></a>
+            <a href="bulletin.html"><div class="profilehouse"></div></a>
         </div>
       </div>
 
@@ -22,5 +26,6 @@
   
   <!--    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
 <!-- https://stackoverflow.com/questions/67248505/how-do-i-make-an-image-move-on-keys-up-down-left-right-->
+<!-- https://www.svgbackgrounds.com/svg-backgrounds-to-html/ -->
 </body>
 </html>
