--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Simple Javascript Calendar</title>
-    <link href="calendar.css" rel="stylesheet">
+    <link href="/css/calendar.css" rel="stylesheet">
     <script defer src="calendar.js"></script>
   </head>
   <body>
