rectified all logos since css and img files are organised to contain all external style files and images

--- a/bulletin/bulletinresult.html
+++ b/bulletin/bulletinresult.html
@@ -18,7 +18,7 @@
     <nav class="navbar">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-           <img src= './prepnancy logo.png' style="width: 150px;">
+           <img src= '/img//prepnancy logo.png' style="width: 150px;">
           </a>
               <ul class="navbar-nav hstack">
               <li class="nav-item me-3">
