--- a/homepage.html
+++ b/homepage.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="homepage.css">
+    <link rel="stylesheet" href="/css/homepage.css">
     <title>Document</title>
 </head>
 <body>
@@ -33,7 +33,7 @@
 
     <nav class="navbar bg-light">
         <div class="container-fluid">
-           <img src= '../wad2G3T6/prepnancy logo.png'>
+           <!-- <img src= './img/prepnancy logo.png'> -->
               <ul class="navbar-nav hstack col-3">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/aboutus.html">About Us</a>
