UI for calendar

--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -6,6 +6,7 @@
     <script defer src="calendar.js"></script>
   </head>
   <body>
+    <div id="container-fluid">
     <!-- (A) PERIOD SELECTOR -->
     <div id="calPeriod">
       <select id="calMonth"></select>
@@ -27,5 +28,6 @@
       <input id="evtDel" type="button" value="Delete">
       <input id="evtSave" type="submit" value="Save">
     </form></dialog>
+  </div>
   </body>
 </html>
