--- a/homepage.html
+++ b/homepage.html
@@ -14,10 +14,7 @@
     <div id="environment">
         <div id="content">
             <section id="backgroundpic"></section>
-            <a href="bulletin.html"><div class="bulletinhouse"><img height=484px width=356px src="./img/5.png" alt=""></div></a>
-            <a href="bulletin.html"><div class="calendarhouse"></div></a>
-            <a href="bulletin.html"><div class="inforhubhouse"></div></a>
-            <a href="bulletin.html"><div class="profilehouse"></div></a>
+            <div class="bulletinhouse" href="bulletin.html"><button class="btn1">Enter</button></div>
         </div>
       </div>
 
