idk what i did le

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
                     class="input-field"
                     autocomplete="off"
                     required
+                    id="username"
                   />
-                  <label>Name</label>
+                  <label>Username</label>
                 </div>
 
                 <div class="input-wrap">
@@ -43,11 +44,12 @@
                     class="input-field"
                     autocomplete="off"
                     required
+                    id="password"
                   />
                   <label>Password</label>
                 </div>
 
-                <input type="submit" value="Sign In" class="sign-btn" />
+                <input type="submit" id="login" value="Sign In" class="sign-btn" />
 
                 <p class="text">
                   Forgotten your password or you login details?
@@ -76,16 +78,18 @@
                     class="input-field"
                     autocomplete="off"
                     required
+                    id="susername"
                   />
-                  <label>Name</label>
+                  <label>Username</label>
                 </div>
 
                 <div class="input-wrap">
                   <input
-                    type="email"
+                    type="text"
                     class="input-field"
                     autocomplete="off"
                     required
+                    id="fetus"
                   />
                   <label>Fetus Nickname</label>
                 </div>
@@ -97,6 +101,7 @@
                     class="input-field"
                     autocomplete="off"
                     required
+                    id="due"
                   />
                   <label>Baby Due Date</label>
                 </div>
@@ -108,6 +113,7 @@
                     class="input-field"
                     autocomplete="off"
                     required
+                    id="email"
                   />
                   <label>Email</label>
                 </div>
@@ -119,11 +125,12 @@
                     class="input-field"
                     autocomplete="off"
                     required
+                    id="pw"
                   />
                   <label>Password</label>
                 </div>
 
-                <input type="submit" value="Sign Up" class="sign-btn" />
+                <input type="submit" value="Sign Up" id="regis" class="sign-btn" />
 
                 <p class="text">
                   By signing up, I agree to the
@@ -162,5 +169,6 @@
     </main>
 
     <script src="./js/login.js"></script>
+    <script src="./js/database.js" type="module"></script>
   </body>
 </html>
