--- a/homepage.html
+++ b/homepage.html
@@ -15,6 +15,8 @@
         <div id="content">
             <section id="backgroundpic"></section>
             <div class="bulletinhouse" href="bulletin.html"><button class="btn1">Enter</button></div>
+            <div class="calendarhouse" href="bulletin.html"><button class="btn1">Enter</button></div>
+            <div class="profilehouse" href="bulletin.html"><button class="btn1">Enter</button></div>
         </div>
       </div>
 
