updated button final

--- a/homepage.html
+++ b/homepage.html
@@ -15,8 +15,9 @@
         <div id="content">
             <section id="backgroundpic"></section>
             <div class="bulletinhouse" href="bulletin.html"><button class="btn1">Enter</button></div>
-            <div class="calendarhouse" href="bulletin.html"><button class="btn1">Enter</button></div>
-            <div class="profilehouse" href="bulletin.html"><button class="btn1">Enter</button></div>
+            <div class="calendarhouse" href="./calendar/index.html"><button class="btn1">Enter</button></div>
+            <div class="profilehouse" href="profile.html"><button class="btn1">Enter</button></div>
+            <div class="infohubhouse" href="bulletin.html"><button class="btn1">Enter</button></div>
         </div>
       </div>
 
