moved a js file

--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -3,7 +3,7 @@
   <head>
     <title>Simple Javascript Calendar</title>
     <link href="/css/calendar.css" rel="stylesheet">
-    <script defer src="calendar.js"></script>
+    <script defer src="/js/calendar.js"></script>
   </head>
   <body>
     <div id="container-fluid">
