--- a/bulletin/bulletin.html
+++ b/bulletin/bulletin.html
@@ -10,27 +10,31 @@
      <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css' 
      rel='stylesheet' integrity='sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx' 
      crossorigin='anonymous'>
-     <link rel="stylesheet" href="../style.css">
+     <link rel="stylesheet" href="../css/quiz.css">
     <title>Bulletin Homepage</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <style>
+
+      @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@200&family=Playfair+Display&display=swap');
+      
+  </style>
 </head>
 <body>
-    <nav class="navbar">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-           <img src= '../img/prepnancy logo.png' style="width: 150px;">
-          </a>
-              <ul class="navbar-nav hstack">
-              <li class="nav-item me-3">
-              <a class="nav-link" href="">Home</a>
-                </li>
+  <nav class="navbar">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/homepage.html">
+       <img src= '../img/logo2.png' style="width: 100px;">
+      </a>
+          <ul class="navbar-nav hstack">
             <li class="nav-item me-3">
-                <a class="nav-link" aria-current="page" href="../aboutus.html">About Us</a>
-              </li>
-              <li class="nav-item me-3">
-                <a class="nav-link" href="../usefullinks.html">Useful Links</a>
-              </li>
-              </ul>
-      </nav>
+                <a class="nav-link" aria-current="page" href="aboutus.html">About Us</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/index.html">Sign Out</a>
+            </li>
+          </ul>
+  </nav>
 
       <div class="textbox1">
             <h1>Share with our community!</h1>
