--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
           <div class="forms-wrap">
             <form action="index.html" autocomplete="off" class="sign-in-form">
               <div class="logo">
-                <img src="./img/logo.png" alt="PREPnancy" />
-                <h4>PREPnancy</h4>
+                <img src="img/logo2.png" alt="PREPnancy" />
+                <!-- <h4>PREPnancy</h4> -->
               </div>
 
               <div class="heading">
