--- a/usefulinfo.html
+++ b/usefulinfo.html
@@ -118,7 +118,7 @@
                           <textarea class="form-control" id="exampleMessage" placeholder="Message"></textarea>
                       </fieldset>
                       <fieldset class="form-group">
-                          <button type="button" class="btn btn-outline-dark">Send</button>
+                          <button type="button" class="button">Send</button>
                       </fieldset>
                   </form>
                 </div>                
