--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
                 <input type="submit" id="login" value="Sign In" class="sign-btn" />
 
                 <p class="text">
-                  Forgotten your password or you login details?
+                  Forgotten your password or login details?
+                  <br>
                   <a href="#">Get help</a> signing in
                 </p>
               </div>
@@ -60,8 +61,7 @@
 
             <form action="index.html" autocomplete="off" class="sign-up-form">
               <div class="logo">
-                <img src="./img/logo.png" alt="PREPnancy" />
-                <h4>Prepnancy</h4>
+                <img src="./img/logo2.png" alt="PREPnancy" />
               </div>
 
               <div class="heading">
@@ -143,9 +143,9 @@
 
           <div class="carousel">
             <div class="images-wrapper">
-              <img src="./img/baby pacifier.jpg" class="image img-1 show" alt="" />
-              <img src="./img/milk bottle.jpg" class="image img-2" alt="" />
-              <img src="./img/pram.jpg" class="image img-3" alt="" />
+              <img src="./img/jonathan-borba-Z39a7lqZusU-unsplash.jpg" class="image img-1 show" alt="" />
+              <img src="./img/khoa-pham-9nC7j1gAS84-unsplash.jpg" class="image img-2" alt="" />
+              <img src="./img/anastasiia-chepinska-B7JVo5y3gL8-unsplash.jpg" class="image img-3" alt="" />
             </div>
 
             <div class="text-slider">
