--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -31,7 +31,7 @@
         </a>
             <ul class="navbar-nav hstack">
               <li class="nav-item me-3">
-                  <a class="nav-link" aria-current="page" href="aboutus.html">About Us</a>
+                  <a class="nav-link" aria-current="page" href="../aboutus.html">About Us</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link" href="/index.html">Sign Out</a>
