--- a/usefulinfo.html
+++ b/usefulinfo.html
@@ -63,8 +63,8 @@
      
                       <div id="app">
                       <datalist id="displayCat" style="margin-bottom:10vh;">
-                        <option v-for="(cat,index) in cats" class="category" v-bind:key="index" v-on:click="getInfo(index)">
-                          {{ cat.name }}
+                        <option v-for="(cat,index) in cats" class="category" v-bind:key="index">
+                          <div v-on:click="getInfo(index)">{{ cat.name }}</div>
                         </option>
                       </datalist>
                     </div>
@@ -73,7 +73,10 @@
               </div>
             </div>
 
-            <div id="display" style="margin-bottom:20vh;" >display info here</div>
+            <div id="display" style="margin-bottom:20vh;">
+              <h1>Headline</h1>
+              <p>Text</p>
+            </div>
 
             
 
