links from homepage

--- a/homepage.html
+++ b/homepage.html
@@ -46,10 +46,10 @@
     <div id="environment">
         <div id="content">
             <section id="backgroundpic"></section>
-            <div class="bulletinhouse" href="bulletin.html"><button class="btn1">Enter</button></div>
-            <div class="calendarhouse" href="./calendar/index.html"><button class="btn1">Enter</button></div>
-            <div class="profilehouse" href="profile.html"><button class="btn1">Enter</button></div>
-            <div class="infohubhouse" href="bulletin.html"><button class="btn1">Enter</button></div>
+            <div class="bulletinhouse"><button onclick="location.href = './bulletin/bulletin.html';"class="btn1">Enter</button></div>
+            <div class="calendarhouse"><button onclick="location.href = '/calendar/calendar.html';" class="btn1">Enter</button></div>
+            <div class="profilehouse"><button onclick="location.href = '/profile.html';"class="btn1">Enter</button></div>
+            <div class="infohubhouse"><button onclick="location.href = '/aboutus.html';"class="btn1">Enter</button></div>
         </div>
       </div>
 
