--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="box">
         <div class="inner-box">
           <div class="forms-wrap">
-            <form action="index.html" autocomplete="off" class="sign-in-form">
+            <div autocomplete="off" class="form sign-in-form">
               <div class="logo">
                 <img src="img/logo2.png" alt="PREPnancy" />
                 <!-- <h4>PREPnancy</h4> -->
@@ -57,9 +57,9 @@
                   <a href="#">Get help</a> signing in
                 </p>
               </div>
-            </form>
+            </div>
 
-            <form action="index.html" autocomplete="off" class="sign-up-form">
+            <div autocomplete="off" class="form sign-up-form">
               <div class="logo">
                 <img src="./img/logo2.png" alt="PREPnancy" />
               </div>
@@ -138,7 +138,7 @@
                   <a href="#">Privacy Policy</a>
                 </p>
               </div>
-            </form>
+            </div>
           </div>
 
           <div class="carousel">
