idk what i did alr

--- a/bulletin/bulletin.html
+++ b/bulletin/bulletin.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="../css/quiz.css">
+     <!-- <link rel="stylesheet" href="../css/quiz.css"> -->
     <title>Bulletin Homepage</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
@@ -80,7 +80,7 @@
                         <h2 class="title">Vitamin</h2>
                         <button class="btnn" onclick="choosing('vitamin')">take a poll</button>
                     </div>
-                    <img src="../img/vitamins.png" alt="vitamin" onclick="choosing('vitamin')"> <br> <a href="quiz.html?topic=vitamin">Vitamin</a> 
+                    <!-- <img src="../img/vitamins.png" alt="vitamin" onclick="choosing('vitamin')"> <br> <a href="quiz.html?topic=vitamin">Vitamin</a>  -->
                 </div>
                 <div class="card col-4">
                     <div class="content">
