styling bulletin page and

--- a/aboutus.html
+++ b/aboutus.html
@@ -91,9 +91,9 @@
                         <span class="nav-item"><a href="" class="nav-link"><i class="fa fa-github fa-lg"></i></a></span>
                         <span class="nav-item"><a href="" class="nav-link"><i class="fa fa-instagram fa-lg"></i></a></span>
   
-                      <div class="row mt-5">
-                        <p class="contactUs">© PREPnancy 2022</p>
-                      </div>
+                      <!-- <div class="row mt-5"> -->
+                        <p class="m-4 contactUs text-center">© PREPnancy 2022</p>
+                      <!-- </div> -->
   
                   </div>
                   <div class="col-sm-7">
